Remove margin around index list; Fix spacing around item actions

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -18,6 +18,7 @@
 
   .title {  }
   #items {
+    margin: 0;
     padding: 2px 0 0 2px;
 
     li {
